# Distribui2

./: .gitignore  Distribuidos2.sln
Debug/: Distribuidos2.ilk
Distribuidos2/: CMakeLists.txt  Distribuidos2.vcxproj  Distribuidos2.vcxproj.filters  Hola.txt
Distribuidos2/Debug/: vc142.idb
Distribuidos2/Debug/Distribuidos2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Distribuidos2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Distribuidos2/Herramientas/: Diccionario.h  File.cpp  LineaDiccionario.h  socket.h
Distribuidos2/Main/: client.cpp  service.cpp
Distribuidos2/Maquinas/: Puertos.h
Distribuidos2/Maquinas/Lector/: ClienteLector.cpp  ClienteLector.h  ServicioLector.cpp  ServicioLector.h  lector.cpp
Distribuidos2/Maquinas/Plantillas/: Cliente.cpp  Cliente.h  Servicio.cpp
Distribuidos2/Maquinas/Sumador/: ServicioSumador.cpp  ServicioSumador.h  sumador.cpp
Distribuidos2/Maquinas/ejecutador/: CMakeLists.txt  ClienteEjecutacion.cpp  ClienteEjecutacion.h  ClienteEjecutador.cpp  ClienteEjecutador.h  Hola.txt  ServicioEjecucion.cpp  ServicioEjecucion.h  ejecutacion.cpp
Distribuidos2/Maquinas/http_server/: ClienteHttpServer.cpp  ClienteHttpServer.h  httpserver.cpp  httpserver.h  main.cpp  tools.cpp  utils.cpp  utils.h
Distribuidos2/Maquinas/http_server/html_dir/: services.html
Distribuidos2/x64/Debug/: vc142.idb
Distribuidos2/x64/Debug/Distribuidos2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Distribuidos2.lastbuildstate
